<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegandLoginactivity">
    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/shapefield">
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:ccp_defaultNameCode="UA"
                android:layout_marginStart="10dp"
                app:ccp_showNameCode="false"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/phone"
        android:background="@android:color/transparent"
        android:layout_gravity="center_vertical"
        android:imeOptions="actionDone"/>
        </LinearLayout>

        <Button
            android:id="@+id/log"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_rounded_pressed"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/zareg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/regestration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shapefield">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:ccp_defaultNameCode="UA"
                android:layout_marginStart="10dp"
                app:ccp_showNameCode="false"/>

            <EditText
        android:id="@+id/numberphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:imeOptions="actionNext"/>
     </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:background="@drawable/shapefield"
        android:layout_marginTop="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/reg"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:background="@drawable/tab_rounded_pressed"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haveacc"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/indentific"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

<EditText
    android:id="@+id/code"
    android:ems="10"
    android:hint="@string/code"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/shapefield"
    android:layout_marginTop="15dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:imeOptions="actionDone"
    />
        <Button
            android:id="@+id/accept"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_rounded_pressed"
            android:textColor="@color/white"
            android:text="@string/approve"
            android:layout_marginTop="15dp" />


    </LinearLayout>
</FrameLayout>