<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".odometrFragment"
    android:orientation="vertical">

        <TextView
            android:id="@+id/dds"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">


        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/textes_gradien_yellow"
            android:text="@string/start" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/textes_gradien_yellow"
            android:textColor="@color/white"
            android:text="@string/pouse" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:background="@drawable/textes_gradien_yellow"
            android:text="@string/stop" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"/>

</LinearLayout>