<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.core.widget.NestedScrollView
    android:id="@+id/scrl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:isScrollContainer="true"
    android:measureAllChildren="true">

    <LinearLayout
        android:id="@+id/main1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/tab_rounded_base"
            android:orientation="horizontal"
            app:layout_scrollFlags="scroll|enterAlways" >


            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="312dp"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:background="@drawable/left_button_yellow"
                android:src="@drawable/ic_action_name"
                android:contentDescription="@string/Shedule"/>


            <LinearLayout
                android:id="@+id/linee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shapetext_yellow"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="312dp"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:background="@drawable/right_button_yellow"
                android:src="@drawable/right"
                android:contentDescription="@string/setting"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_action"
            android:layout_width="306dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/addexe"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="38dp"
                android:gravity="center_vertical"
                android:shadowColor="#DD0000"
                android:text="@string/addexe"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="126dp"
                android:src="@drawable/ic_baseline_add_24"
                android:contentDescription="@string/Shedule"/>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>


    <CalendarView
        android:layout_gravity="bottom"
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>

</FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
